# pippop

./: .gitignore  GEMINI.md  README.md  import-summary.txt  local.properties  pippop.keystore
.gemini/: settings.json  settings.json.orig
.github/workflows/: pages.yml
android/app/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
docs/: ai-stuff.txt  bubbleMath.tex
gradle/wrapper/: gradle-wrapper.properties
python/: bubble.txt  rationalbezier.py  study.py  study_sage.ipynb  sympy_play.py
python/.ipynb_checkpoints/: study-checkpoint.ipynb  study_sage-checkpoint.ipynb
rust/: Cargo.toml  build_web.sh  index.html  manifest.json  sw.js
rust/benches/: physics_bench.rs
rust/src/: main.rs  resources.rs
rust/src/game/: burst.rs  controller.rs  debug.rs  gameover.rs  highlight.rs  mod.rs  pause.rs  pop.rs  reap.rs  sanity.rs  score.rs  slide.rs  sound.rs  spawn.rs  state.rs  swap.rs  title.rs  world.rs
rust/src/graph/: bubble.rs  edge.rs  mod.rs
rust/src/graphics/: bubble.rs  colors.rs  geometry.rs  mod.rs
rust/src/graphics/shaders/: bubble.frag  bubble.vert
rust/src/physics/: gravity.rs  mod.rs  pressure.rs
rust_core/: Cargo.toml  build_web.sh  index.html
rust_core/benches/: physics_bench.rs
rust_core/docs/: bubbleslide.html
rust_core/src/: ffi.rs  lib.rs  main.rs  resources.rs  style.rs
rust_core/src/game/: burst.rs  controller.rs  game.rs  gameover.rs  highlight.rs  mod.rs  pop.rs  reap.rs  sanity.rs  score.rs  slide.rs  sound.rs  spawn.rs  state.rs  swap.rs  title.rs  (+1 more)
(+190 files in other folders)
