[package]
name = "rust"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
slotmap = "1.0.7"
macroquad = { version = "0.4", features = ["audio"] }
log = "0.4.29"
env_logger = "0.11.10"
quad-storage = "0.1.3"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "physics_bench"
harness = false
